2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added signal handler for SIGHUP to save .aria2 file when terminal
	is closed. The handler is the same one for SIGINT and SIGTERM.
	* src/MultiUrlRequestInfo.cc

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined method name in XmlRpcMethod subclasses.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added system.multicall XML-RPC method.
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Check structure depth when decoding.
	* src/bencode.cc
	* src/bencode.h
	* test/BencodeTest.cc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented tellStopped XML-RPC method in man page.
	* doc/aria2c.1.txt

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tellStopped XML-RPC method to aria2rpc.
	* doc/xmlrpc/aria2rpc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tellStopped XML-RPC method. This method returns stopped
	download in the specified range. It takes same parameters with
	tellWaiting XML-RPC method. offset = 0 means the oldest download.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-12-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use AI_ADDRCONFIG flag if it is available. Refactored so that
	getaddrinfo calls are not scattered around. Unset AI_ADDRCONFIG
	when conducting unit tests because they fail if networking
	interface is not configured with IPv4 address.
	* src/NameResolver.cc
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2netcompat.h
	* test/AllTest.cc

2009-12-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>