@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 12/25/2009
+.\"      Date: 12/26/2009
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "12/25/2009" "Aria2" "Aria2 Manual"
+.TH "ARIA2C" "1" "12/26/2009" "Aria2" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -2358,6 +2358,10 @@ enabledFeatures
 .RS 4
 List of enabled features\&. Each feature name is of type string\&.
 .RE
+.sp
+\fBsystem\&.multicall\fR \fImethods\fR
+.sp
+This methods encapsulates multiple method calls in a single request\&. \fImethods\fR is of type array and its element is struct\&. The struct contains two keys: "methodName" and "params"\&. "methodName" is the method name to call and "params" is array containing parameters to the method\&. This method returns array of responses\&. The element of array will either be a one\-item array containing the return value of each method call or struct of fault element if an encapsulated method call fails\&.
 .SS "Error Handling"
 .sp
 In case of error, aria2 returns faultCode=1 and the error message in faultString\&.
