@@ -3051,6 +3051,15 @@ enabledFeatures
 </p>
 </dd>
 </dl></div>
+<div class="paragraph"><p><strong>system.multicall</strong> <em>methods</em></p></div>
+<div class="paragraph"><p>This methods encapsulates multiple method calls in a single request.
+<em>methods</em> is of type array and its element is struct.  The struct
+contains two keys: "methodName" and "params".  "methodName" is the
+method name to call and "params" is array containing parameters to the
+method.  This method returns array of responses.  The element of array
+will either be a one-item array containing the return value of each
+method call or struct of fault element if an encapsulated method call
+fails.</p></div>
 <h3 id="_error_handling">Error Handling</h3><div style="clear:left"></div>
 <div class="paragraph"><p>In case of error, aria2 returns faultCode=1 and the error message in
 faultString.</p></div>
@@ -3519,7 +3528,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-12-25 23:48:03 JST
+Last updated 2009-12-26 23:34:30 JST
 </div>
 </div>
 </body>
