@@ -1,5 +1,10 @@
 2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Documented system.multicall XML-RPC method in man page.
+	* doc/aria2c.1.txt
+
+2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Added signal handler for SIGHUP to save .aria2 file when terminal
 	is closed. The handler is the same one for SIGINT and SIGTERM.
 	* src/MultiUrlRequestInfo.cc
